--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
     "name": "SchoolHub",
     "short_name": "SchoolHub",
     "description": "Sua  Organiza\u00e7\u00e3o,  Nossa aplica\u00e7\u00e3o",
+    "lang" : "pt",
     "icons": [
         {
             "src": "/manifest/icon-192x192.png",
