--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
     "theme_color": "#83D4A9",
     "background_color": "#FFF",
-    "display": "fullscreen",
+    "display-override": "fullscreen",
+    "display": "standalone",
     "scope": "/",
     "start_url": "/index.html",
     "name": "SchoolHub",
@@ -48,5 +49,7 @@
         ],
         "permissions": [
             "webRequest"
-        ]
+        ],
+        "categories": ["books", "education"],
+        "id": "/index.html"
 }
